--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -2,6 +2,18 @@ name: Backend CI
 
 on:
   workflow_call:
+    inputs:
+      DB_NAME:
+        required: true
+        type: string
+      DB_USER:
+        required: true
+        type: string
+    secrets:
+      DB_PASS:
+        required: true
+      DJANGO_SECRET_KEY:
+        required: true
 
 jobs:
   python:
@@ -18,12 +30,11 @@ jobs:
       - name: Generate .env file for docker-compose
         run: |
           cd backend
-          echo "DB_NAME=${{ vars.DB_NAME }}" >> .env
-          echo "DB_USER=${{ vars.DB_USER }}" >> .env
-          echo "DB_PASS=${{ secrets.DB_PASS }}" >> .env
+          echo "DB_NAME=${{ inputs.DB_NAME }}" >> .env
+          echo "DB_USER=${{ inputs.DB_USER }}" >> .env
           echo "DB_PORT=5432" >> .env
+          echo "DB_PASS=${{ secrets.DB_PASS }}" >> .env
           echo "DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" >> .env
-          echo "DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1" >> .env
           cat .env
 
       # -------------------------------------------------------------
