--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,4 +70,10 @@ jobs:
           docker compose run --rm tf -chdir=deploy init
           # docker compose run --rm tf -chdir=deploy workspace select -or-create $TF_WORKSPACE
           # docker compose run --rm tf -chdir=deploy workspace select $TF_WORKSPACE
-          docker compose run --rm tf -chdir=deploy apply -auto-approve
+          docker compose run \
+            -e TF_VAR_db_password \
+            -e TF_VAR_db_username \
+            -e TF_VAR_django_secret_key \
+            -e TF_WORKSPACE \
+            tf -chdir=deploy apply -auto-approve
+
