--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_REGION
+      - TF_VAR_ecr_nginx_img_uri
+      - TV_VAR_ecr_api_img_uri
       - TF_VAR_db_password
       - TF_VAR_db_username
       - TF_VAR_django_secret_key
